# Personlig-Coach

./: .dockerignore  .env.example  .gitignore  BACKEND_WIRING_HANDOFF.md  Dockerfile  pyproject.toml  railway.json
.claude/: launch.json
docs/review-flows/: daily-ideal.md  weekly-current.md  weekly-ideal.md  workout-publishing-ideal.md
scripts/: garmin_probe.py
src/coach/: body_mode.py  cli.py  config.py  db.py  focus.py  llm.py  memory.py  models.py  notification_prefs.py  notify.py  notify_producers.py  plan.py  readiness.py  readiness_score.py  reports.py  review.py  rules.py  scheduler.py  sync.py  workout_delivery.py
src/coach/agents/: coordinator.py  gemini.py
src/coach/integrations/: garmin.py  garmin_auth.py  hevy.py  notion.py  strava.py  strava_auth.py  withings.py  withings_auth.py
src/coach/tools/: __init__.py  garmin_tools.py  hevy_tools.py  memory_tools.py  specs.py  strava_tools.py  withings_tools.py
src/coach/web/: app.py  stats.py
src/coach/web/static/: app.js  calendar.js  charts.js  coach.css  coach.data.js  coach.icons.js  coach.js  coach.screens.js  data.js  health.js  index.html  legacy-index.html  login.html  manifest.webmanifest  stats.css  stats.js  style.css  sw.js
tests/: test_body_mode.py  test_garmin_workouts.py  test_gemini_agent.py  test_hevy_routines.py  test_notification_prefs.py  test_notify.py  test_notify_producers.py  test_plan.py  test_readiness_score.py  test_report_workflows.py  test_rules.py  test_scheduler.py  test_training_blocks.py  test_web_endpoints.py  test_web_stats.py  test_workout_delivery.py
