[project]
name = "coach"
version = "0.1.0"
description = "Multi-agent AI fitness coach (Strava/Hevy/Withings)"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "itsdangerous>=2.0",
    "apscheduler>=3.10",
]

[project.scripts]
coach = "coach.cli:main"
coach-sync = "coach.sync:main"
coach-review = "coach.review:main"
coach-readiness = "coach.readiness:main"
coach-web = "coach.web.app:main"
coach-strava-auth = "coach.integrations.strava_auth:main"
coach-withings-auth = "coach.integrations.withings_auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coach"]
